# CS1-exercises

./: CPX_dice_roll.js  commenter.py  crypto_corgi.py  ghost_hunt.py  guess-the-word-game.py  heart-1.py  introduction_to_drafter.py  plotting.py  rainy_forecasts.py  sequences_biggest_garden.py  three-card-poker.py  todo_list.py
__MACOSX/: ._game_of_life
game_of_life/: main.py  patterns.toml  pyproject.toml
lead-data-science-exploration/: lead.py  main.py
protein_lookup/: food_lookup.py  food_simple.tsv
