[project]
name = "game-of-life"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["matplotlib>=3.10.7"]

[dependency-groups]
dev = [
    "matplotlib-stubs>=0.3.11",
    "ruff>=0.14.1",
]

[tool.ruff]
line-length = 120

[tool.pyright]
"include" = ["src"]
"typeCheckingMode" = "strict"
